fix contrast on form input placeholders

--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_event-calendar.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_event-calendar.scss
@@ -78,6 +78,10 @@ form.searchandfilter {
         input {
           margin: 0 !important;
         }
+
+        ::placeholder {
+          color: #757575;
+        }
       }
 
       @include breakpoint(medium) {
